; ModuleID = '/home/carl/AnghaBench/h2o/lib/common/extr_http3client.c_handle_input_error.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/common/extr_http3client.c_handle_input_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_h2o_http3client_req_t = type { i32 (%struct.st_h2o_http3client_req_t*, i32**, i32*, i32, i8**)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.st_h2o_http3client_req_t*, i32)* @handle_input_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @handle_input_error(%struct.st_h2o_http3client_req_t* %0, i32 %1) #0 {
  %3 = alloca %struct.st_h2o_http3client_req_t*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  store %struct.st_h2o_http3client_req_t* %0, %struct.st_h2o_http3client_req_t** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32* null, i32** %5, align 8
  store i32* null, i32** %6, align 8
  store i8* null, i8** %7, align 8
  %8 = load %struct.st_h2o_http3client_req_t*, %struct.st_h2o_http3client_req_t** %3, align 8
  %9 = getelementptr inbounds %struct.st_h2o_http3client_req_t, %struct.st_h2o_http3client_req_t* %8, i32 0, i32 0
  %10 = load i32 (%struct.st_h2o_http3client_req_t*, i32**, i32*, i32, i8**)*, i32 (%struct.st_h2o_http3client_req_t*, i32**, i32*, i32, i8**)** %9, align 8
  %11 = load %struct.st_h2o_http3client_req_t*, %struct.st_h2o_http3client_req_t** %3, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i32 %10(%struct.st_h2o_http3client_req_t* %11, i32** %5, i32* %12, i32 %13, i8** %7)
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
